--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,23 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Carlos Díez Cobo
+email: carlosdico@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+ Soy administrador de sistemas y programador con experiencia 
+ en desarrollo y optimización de infraestructuras tecnológicas. 
+ Apasionado por la innovación, disfruto creando soluciones que mejoren 
+ la eficiencia y la automatización. En este sitio comparto mis proyectos y conocimientos técnicos.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: carlosdico
+github_username: carlosdico
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-coffeescript
 
 # Exclude from processing.
 # The following items will not be processed, by default.
