--- a/_config.yml
+++ b/_config.yml
@@ -34,8 +34,8 @@ github_username: carlosdico
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-feed
-  - jekyll-coffeescript
-  - jekyll-remote-theme # add this line to the plugins list if you already have one
+  #- jekyll-coffeescript
+  #- jekyll-remote-theme # add this line to the plugins list if you already have one
 
 
 
