--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ twitter_username: carlosdico
 github_username: carlosdico
 
 # Build settings
-remote_theme: pages-themes/cayman@v0.2.0
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
   #- jekyll-coffeescript
