--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,8 @@ twitter_username: carlosdico
 github_username: carlosdico
 
 # Build settings
-theme: minima
+#theme: minima
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-feed
   #- jekyll-coffeescript
