--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Carlos Díez Cobo
+title: carlosdico
 email: carlosdico@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
  Soy administrador de sistemas y programador con experiencia 
@@ -31,10 +31,10 @@ twitter_username: carlosdico
 github_username: carlosdico
 
 # Build settings
-#theme: minima
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme 
   #- jekyll-coffeescript
   #- jekyll-remote-theme # add this line to the plugins list if you already have one
 
